--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UdQmVG5U784uQB2PuwNl9SNs1xPOn1XXJ84UOAa/SKk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
 
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
@@ -25,3 +25,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+
+API_PREFIX=api
+API_NAME=sample-api
