--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "barryvdh/laravel-cors": "^0.8.1",
+        "dingo/api": "1.0.*@dev",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -15,9 +18,6 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-ide-helper": "^2.2",
-        "dingo/api": "1.0.*@dev",
-        "tymon/jwt-auth": "0.5.*",
-        "barryvdh/laravel-cors": "^0.8.1",
         "doctrine/dbal": "~2.3",
         "mpociot/laravel-apidoc-generator": "^1.5"
     },
